--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,8 @@ dependencies {
 			"fabric-entity-events-v1",
 			"fabric-lifecycle-events-v1",
 			"fabric-transitive-access-wideners-v1",
-			"fabric-biome-api-v1"
+			"fabric-biome-api-v1",
+			"fabric-dimensions-v1"
 	]
 
 	// Add each module as a dependency
